--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
     </style>
 </head>
 <body>
+    <!-- Audio Player -->
     <audio autoplay loop>
-        <source src="audio/red-thing.m4a" type="audio/mp4">
+        <source src="audio/red-thing.m4a" type="audio/mpeg">
     </audio>
-    
+
     <div class="container">
         <a href="https://www.youtube.com/channel/UCEvSzkAA1z8mT3ZljwR7umQ" class="button">Too Much Pro Button</a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Super Safe Button</a>
