--- a/index.html
+++ b/index.html
@@ -86,30 +86,30 @@
     <div class="section">
         <div>CPU: Intel i5 8th Gen</div>
         <div class="image-container">
-            <img src="images/laptop-back.jpg" alt="Laptop Back View">
+            <img src="image/laptop-back.jpg" alt="Laptop Back View">
         </div>
     </div>
     <div class="section alt">
         <div>RAM: 8GB</div>
         <div class="image-container">
-            <img src="images/laptop-open.avif" alt="Laptop Open View">
+            <img src="image/laptop-open.avif" alt="Laptop Open View">
         </div>
     </div>
     <div class="section">
         <div>Storage: 512GB NVMe + 1TB HDD</div>
         <div class="image-container">
-            <img src="images/sideways-laptop.avif" alt="Laptop Sideways View">
+            <img src="image/sideways-laptop.avif" alt="Laptop Sideways View">
         </div>
     </div>
     
     <div class="section">Noob still no beat RE7</div>
     <div class="image-container">
-        <img src="images/re7-ezgif.com-webp-to-jpg-converter.jpg" alt="Resident Evil 7">
+        <img src="image/re7-ezgif.com-webp-to-jpg-converter.jpg" alt="Resident Evil 7">
     </div>
     
     <div class="section">Nigga still no play Dying Light</div>
     <div class="image-container">
-        <img src="images/dying-the-following.jpg" alt="Dying Light The Following">
+        <img src="image/dying-the-following.jpg" alt="Dying Light The Following">
     </div>
 
     <script>
