--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
             <img src="image/sideways-laptop.avif" alt="Laptop Sideways View">
         </div>
     </div>
+    <div class="section alt">
+        <div>Design: Sleek and Professional</div>
+        <div class="image-container">
+            <img src="image/stack-on-top-side.avif" alt="Laptop Stacked Side View">
+        </div>
+    </div>
     
     <div class="section">Noob still no beat RE7</div>
     <div class="image-container">
