--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h1>lol u fat</h1>
     
     <audio autoplay loop>
-        <source src="audio/red-thing.m4a" type="audio/mpeg">
+        <source src="audio/red-thing.m4a" type="audio/m4a">
     </audio>
     
     <div class="container">
