--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </audio>
     
     <div class="container">
-        <a href="https://www.youtube.com/channel/UCEvSzkAA1z8mT3ZljwR7umQ" class="button">Too Much Pro Button</a>
+        <a href="https://www.youtube.com/@batsnefs" class="button">Too Much Pro Button</a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Super Safe Button</a>
         <a href="https://www.instagram.com/q_6sim/" class="button">Super Cool Insta</a>
     </div>
