--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container">
         <a href="https://www.youtube.com/@batsnefs" class="button">Too Much Pro Button</a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">This Button Will Not give U Up</a>
-        <a href="https://www.instagram.com/q_6sim/" class="button">Super Cool Insta</a>
+        <a href="https://www.instagram.com/q_6sim/" class="button">Not a Promotion</a>
     </div>
     
     <div class="silver-text">Laptop Too Much Pro</div>
@@ -107,7 +107,7 @@
         <img src="image/re7-ezgif.com-webp-to-jpg-converter.jpg" alt="Resident Evil 7">
     </div>
     
-    <div class="section">Nigga still no play Dying Light</div>
+    <div class="section">Nigger still no play Dying Light</div>
     <div class="image-container">
         <img src="image/dying-the-following.jpg" alt="Dying Light The Following">
     </div>
