--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </style>
 </head>
 <body>
-    <h1>lol u fat</h1>
+    <h1>lol u gay nigga</h1>
     
     <audio autoplay loop>
         <source src="audio/red-thing.mp3" type="audio/mp3">
