--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <div class="silver-text">Laptop Too Much Pro</div>
     
     <div class="section">
-        <div>CPU: Intel i5 8th Gen</div>
+        <div>Intel i5 8th Gen</div>
         <div class="image-container">
             <img src="image/laptop-back.jpg" alt="Laptop Back View">
         </div>
     </div>
     <div class="section alt">
-        <div>RAM: 8GB</div>
+        <div>8GB Ram</div>
         <div class="image-container">
             <img src="image/laptop-open.avif" alt="Laptop Open View">
         </div>
     </div>
     <div class="section">
-        <div>Storage: 512GB NVMe + 1TB HDD</div>
+        <div>512GB NVMe + 1TB HDD</div>
         <div class="image-container">
             <img src="image/sideways-laptop.avif" alt="Laptop Sideways View">
         </div>
