--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <img src="image/re7-ezgif.com-webp-to-jpg-converter.jpg" alt="Resident Evil 7">
     </div>
     
-    <div class="section">Nigger still no play Dying Light</div>
+    <div class="section">Nigger still no play Fortnite</div>
     <div class="image-container">
-        <img src="image/dying-the-following.jpg" alt="Dying Light The Following">
+        <img src="image/Fortnite.jpg" alt="fortnite">
     </div>
 
     <script>
