--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <img src="image/dawood.png" alt="dawood">
     </div>
     
-    <div class="section">Nigger still no play Fortnite</div>
+    <div class="section">qasim too much pro</div>
     <div class="image-container">
-        <img src="image/Fortnite.jpg" alt="fortnite">
+        <img src="image/gigachad.png" alt="qasim">
     </div>
 
     <script>
