--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>batsnefs.com</title>
-    <link rel="icon" href="image/trademark.png" type="image/png">
+    <link rel="icon" href="image/trademark.jpg" type="image/jpg">
     <style>
         body {
             background-color: #111;
